# farbfeld-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
.ssh/: id_rsa.enc  update-rustdoc
farbfeld/: enum.FarbfeldError.html  index.html  sidebar-items.js  struct.FarbfeldDecoder.html  struct.FarbfeldEncoder.html  type.FarbfeldResult.html
farbfeld/decoder/: sidebar-items.js  struct.FarbfeldDecoder.html
farbfeld/encoder/: sidebar-items.js  struct.FarbfeldEncoder.html
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/std/error/: trait.Error.js
src/: decoder.rs  encoder.rs  lib.rs  tests.rs
src/farbfeld/: decoder.rs.html  encoder.rs.html  lib.rs.html
