[package]
name = "farbfeld"
version = "0.2.0"
description = "A simple encoding format from suckless."
license = "Unlicense"

authors = ["Juggle-Tux <juggle-tux@users.noreply.github.com>"]
documentation = "https://juggle-tux.github.io/farbfeld-rs"
homepage = "https://github.com/juggle-tux/farbfeld-rs"
repository = "https://github.com/juggle-tux/farbfeld-rs.git"

[dependencies]
byteorder = "0.4"
